# ContinousIntegrationPlayground

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  MyCmakeConfig.h.in  README.md  appveyor.yml  generateDocumentationAndDeploy.sh  main.cpp  mylib.h  mytest.cpp
app/: main.cpp
html/: _my_cmake_config_8h_source.html  dir_000000_000001.html  dir_000002_000001.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  files.html  files.js  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md__home_travis_build__m_r_konrad__continous_integration_playground__r_e_a_d_m_e.html  mylib2_8h.html  mylib2_8h.js  mylib2_8h_source.html  mylib3_8h.html  mylib3_8h.js  mylib3_8h_source.html  mylib_8h.html  mylib_8h.js  mylib_8h__dep__incl.map  mylib_8h__dep__incl.md5  mylib_8h_source.html  mytest_8cpp.html  mytest_8cpp.js  mytest_8cpp__incl.map  mytest_8cpp__incl.md5  navtree.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  functions_2.js  search.js
latex/: dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_d422163b96683743ed3963d4aac17747.tex  dir_d422163b96683743ed3963d4aac17747_dep.md5  files.tex  main_8cpp.tex  main_8cpp__incl.md5  md__home_travis_build__m_r_konrad__continous_integration_playground__r_e_a_d_m_e.tex  mylib2_8h.tex  mylib3_8h.tex  mylib_8h.tex  mylib_8h__dep__incl.md5  mytest_8cpp.tex  mytest_8cpp__incl.md5  refman.tex
lib/: mylib.h  mylib2.h  mylib3.h
tests/: CMakeLists.txt  mytest.cpp
